deploy/4central.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-service
  namespace: examen-distribuidas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central-service
  template:
    metadata:
      labels:
        app: central-service
    spec:
      containers:
      - name: central-service
        image: ransilvav29/central-service:1.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: central-service
  namespace: examen-distribuidas
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: central-service
