deploy/5inventory.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: examen-distribuidas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
      - name: inventory-service
        image: ransilvav29/inventory-service:1.0
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: examen-distribuidas
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: inventory-service
