deploy/6billing.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: examen-distribuidas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
      - name: billing-service
        image: ransilvav29/billing-service:1.0
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: examen-distribuidas
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: 3002
  selector:
    app: billing-service
