deploy/7ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agroflow-ingress
  namespace: examen-distribuidas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: agroflow.local
    http:
      paths:
      - path: /central
        pathType: Prefix
        backend:
          service:
            name: central-service
            port:
              number: 3000
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 3001
      - path: /billing
        pathType: Prefix
        backend:
          service:
            name: billing-service
            port:
              number: 3002
